2008-02-29  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: Hacks for fixing form display in MSIE.

2008-02-28  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (ShowForm): Allow numeric fields anignment.

	* pytis/form/screen.py: Added support for menu autoindex
	keyboard access.

	* pytis/form/commands_.py: Cosmetic changes.

	* pytis/form/application.py: Added support for menu autoindex
	keyboard access.

2008-02-22  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: Always take a `PresentedRow' instance as a
	constructor argument.

2008-02-20  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (EditForm._export_field): Set the `fullsize'
	style when width is None for textarea.

2008-02-20  Pavel Hanak  <hanak@asellus.cz>

	* pytis/output/formatter.py (LoutFormatter._format_text): Try to
	solve the problem with ' & ' at the end of wrapped elements such
	as '@B'.
	(LoutFormatter._format_conc): See above.

2008-01-30  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/_grid.py (ListTable._cached_value): Indent the first
	column according to tree level.
	(ListTable._update_columns): Update the tree level column.

2008-01-29  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/application.py: Fixes for wx 2.8.x.

	* pytis/form/inputfield.py (InputField._set_focus): Focus the
	current tab if the field is in a `wx.Notebook'.

	* pytis/data/postgresql.py (PostgreSQLStandardBindingHandler._pg_insert)
	(PostgreSQLStandardBindingHandler._pg_update): Escape `%' signs in
	query values when binary values are passed as `query_args'.

2008-01-21  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/screen.py (wx_button): Don't disable the button when
	the command is not enabled.

	* pytis/form/form.py (EditForm._create_button): Set button
	availability explicitly.

2008-01-14  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/screen.py (wx_button): New argument `update'.  Don't
	bind to UPDATE_UI events to temporarily solve the problem of
	freezes.
