@@ -320,8 +320,8 @@ class EditForm(_SingleRecordForm, _SubmittableForm):
             if field.spec.height() > 1:
                 ctrl = g.textarea
                 attr['rows'] = field.spec.height()
-                attr['cols'] = width = field.spec.width(None)
-                if width is None:
+                attr['cols'] = width = field.spec.width()
+                if width >= 80:
                     attr['cls'] = 'fullsize'
             else:
                 if isinstance(type, pytis.data.String):
